aks/tripviewersvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  type: LoadBalancer
  selector:
    app: tripviewers
  ports:
    - port: 80 # SERVICE exposed port
      name: http # SERVICE port name
      protocol: TCP # The protocol the SERVICE will listen to
      targetPort: 80 # Port to forward to in the POD
