aks/userprofilesvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: userprofile
  ports:
    - port: 80 # SERVICE exposed port
      name: http # SERVICE port name
      protocol: TCP # The protocol the SERVICE will listen to
      targetPort: 80 # Port to forward to in the POD
---
kind: Service
apiVersion: v1
metadata:
  name: userprofile-external
spec:
  type: ExternalName
  externalName: userprofile.api.svc.cluster.local
  ports:
  - port: 80
    name: http
