aks/ingress.yaml
#ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tripviewer
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: tripviewer.e7eab432c6944823b7eb.brazilsouth.aksapp.io
      http:
        paths:
          - backend: # How the ingress will handle the requests
              service:
               name: tripviewer # Which service the request will be forwarded to
               port:
                 name: http # Which port in that service
            path: / # Which path is this rule referring to
            pathType: Prefix # See more at https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
          - backend: # How the ingress will handle the requests
              service:
               name: poi # Which service the request will be forwarded to
               port:
                 name: http # Which port in that service
            path: /api/poi # Which path is this rule referring to
            pathType: Prefix # See more at https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
          - backend: # How the ingress will handle the requests
              service:
               name: trips # Which service the request will be forwarded to
               port:
                 name: http # Which port in that service
            path: /api/trips # Which path is this rule referring to
            pathType: Prefix # See more at https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
          - backend: # How the ingress will handle the requests
              service:
               name: user-java # Which service the request will be forwarded to
               port:
                 name: http # Which port in that service
            path: /api/user-java # Which path is this rule referring to
            pathType: Prefix # See more at https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
          - backend: # How the ingress will handle the requests
              service:
               name: userprofile # Which service the request will be forwarded to
               port:
                 name: http # Which port in that service
            path: /api/user # Which path is this rule referring to
            pathType: Prefix # See more at https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
